Exercise 1.11/manifests/2.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-file
          emptyDir: { }
        - name: shared-pings
          persistentVolumeClaim:
            claimName: pings-claim
      containers:
        - image: "katushka/log-output:1.5"
          name: log-output
          volumeMounts:
            - name: shared-file
              mountPath: /usr/src/app/local_files
            - name: shared-pings
              mountPath: /usr/src/app/files
        - image: "katushka/timestamp-generator:1.1"
          name: timestamp-generator
          volumeMounts: # Mount volume
            - name: shared-file
              mountPath: /usr/src/app/local_files
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-pings
          persistentVolumeClaim:
            claimName: pings-claim
      containers:
        -
          image: "katushka/ping-pong:1.3"
          name: ping-pong
          volumeMounts:
            - name: shared-pings
              mountPath: /usr/src/app/files
